--- a/python/ampls/CMakeLists.txt
+++ b/python/ampls/CMakeLists.txt
@@ -2,11 +2,14 @@ include("../createPythonWrapper.cmake")
 set(DIR_CPP_INCLUDE ${DIR_CPP_INCLUDE}
 ${cplex_INCLUDE_DIR}
 ${gurobi_INCLUDE_DIR}/gurobi
-${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/cplex/include
+${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/cplexmp/include
 ${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/gurobi/include
 )
 
 createPythonWrapper(ampls ampls ampls ampls)
 target_link_libraries(amplpy_ampls_swig
-cplex-drv cplex-lib
-gurobi-drv gurobi-lib)
+cplexmp-drv cplexmp-lib
+gurobi-drv gurobi-lib
+xpress-drv xpress-lib
+copt-drv copt-lib
+)
