--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ obj
 /python/examples/env
 *~
 /doc/rst/doxyxml
+/csharp/copt/api/dev_coptsharp.csproj
+/csharp/cplexmp/api/dev_cplexmpsharp.csproj
+/python/examples/.vscode
