--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
         cp support/twine.sh $WHEELHOUSE/twine.sh
         cd python/$SOLVER
         bash prepare.sh linux64
-        # bash swig.sh
+        bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
         pip install cibuildwheel==1.12.0
@@ -64,7 +64,7 @@ jobs:
         TMP=`pwd`/tmp
         cd python/$SOLVER
         bash prepare.sh osx64
-        # bash swig.sh
+        bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
         pip install cibuildwheel==1.12.0
@@ -104,7 +104,7 @@ jobs:
         TMP=`pwd`/tmp
         cd python/$SOLVER
         bash prepare.sh win64
-        # bash swig.sh
+        bash swig.sh
         python -m pip install --user --upgrade pip
         python -m pip install urllib3[secure] --upgrade
         python -m pip install cibuildwheel==1.12.0
