--- a/csharp/ampls/CMakeLists.txt
+++ b/csharp/ampls/CMakeLists.txt
@@ -1,19 +1,17 @@
 include("../createCsharpProject.cmake")
-set(DIR_CPP_INCLUDE ${DIR_CPP_INCLUDE}
-${cplex_INCLUDE_DIR}
-${xpress_INCLUDE_DIR}
-${gurobi_INCLUDE_DIR}/gurobi
-${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/cplexmp/include
-${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/gurobi/include
-${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/cbcmp/include
-${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/xpress/include
-${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/copt/include
-)
 
+
+set(SOLVERS_INCLUDE "")
+set(LINK_LIBS "")
+foreach(s ${AMPLS_SOLVER_NAMES})
+    if(ENABLE_${s})
+        get_target_property(libinclude ${${s}_SOLVER}-solverlib INTERFACE_INCLUDE_DIRECTORIES)
+        get_target_property(targetinclude ${${s}_TARGET}-drv INTERFACE_INCLUDE_DIRECTORIES)
+        set(LINK_LIBS ${LINK_LIBS} ${${s}_TARGET}-lib ${${s}_TARGET}-drv)
+        set(SOLVERS_INCLUDE ${SOLVERS_INCLUDE} ${libinclude} ${targetinclude})
+    endif()
+endforeach()
+
+set(DIR_CPP_INCLUDE ${DIR_CPP_INCLUDE} ${SOLVERS_INCLUDE})
 createCsharpProject(ampls ampls ampls)
-target_link_libraries(amplssharp_c
-cplexmp-drv cplexmp-lib
-gurobi-drv gurobi-lib
-xpress-drv xpress-lib
-copt-drv   copt-lib
-)
+target_link_libraries(amplssharp_c ${LINK_LIBS})
