--- a/csharp/gurobi/examples/gurobisharp-examples.csproj
+++ b/csharp/gurobi/examples/gurobisharp-examples.csproj
@@ -53,7 +53,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\api\dev_x-gurobisharp.csproj">
+    <ProjectReference Include="..\..\xpress\api\dev_xpresssharp.csproj">
       <Project>{2138a0c3-4c0f-436a-b5b0-da18ea56afe3}</Project>
       <Name>dev_gurobisharp</Name>
     </ProjectReference>
