Build both xpress and cplex on manylinux2014

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ jobs:
         solver: 'gurobi'
       cplex:
         solver: 'cplexmp'
+        CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
       xpress:
         solver: 'xpress'
         CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
@@ -52,7 +53,6 @@ jobs:
         solver: 'cplexmp'
       xpress:
         solver: 'xpress'
-        CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps: 
