Update cibuildwheel to 2.12.0 for Python up to 3.11

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,6 @@
+variables:
+  CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
+
 jobs:
 - job: linux
   pool: {vmImage: 'ubuntu-latest'}
@@ -31,8 +34,11 @@ jobs:
         bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
+        python -m pip install --upgrade cibuildwheel==1.12.0
+        CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
+        python -m pip install --upgrade cibuildwheel==2.12.0
+        cibuildwheel --platform linux --output-dir $TMP .
         pip install cibuildwheel==1.12.0
-        CIBW_SKIP='pp* *-manylinux*_i686 cp27-*' cibuildwheel --output-dir $TMP .
         ls -l $TMP
         test "$(ls -A $TMP)" || exit 1
         mv $TMP/* $WHEELHOUSE/
@@ -72,8 +78,8 @@ jobs:
         bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
-        pip install cibuildwheel==1.12.0
-        CIBW_SKIP='pp*' cibuildwheel --output-dir $TMP .
+        python -m pip install --upgrade cibuildwheel==2.12.0
+        cibuildwheel --platform macos --output-dir $TMP .
         ls -l $TMP
         test "$(ls -A $TMP)" || exit 1
         mv $TMP/* $WHEELHOUSE/
@@ -114,9 +120,10 @@ jobs:
         bash swig.sh
         python -m pip install --user --upgrade pip
         python -m pip install urllib3[secure] --upgrade
-        python -m pip install cibuildwheel==1.12.0
-        # Skipping python 2.7 (due to c++11)
-        CIBW_SKIP='*-win32 pp* cp27-*' cibuildwheel --output-dir $TMP .
+        python -m pip install --upgrade cibuildwheel==1.12.0
+        CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir $TMP .
+        python -m pip install --upgrade cibuildwheel==2.12.0
+        cibuildwheel --platform windows --output-dir $TMP .
         ls -l $TMP
         test "$(ls -A $TMP)" || exit 1
         mv $TMP/* $WHEELHOUSE/
